// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 1`] = `
<a
  className="sc-kGXeez kAMDKU"
/>
`;

exports[`should render abbr 1`] = `
<abbr
  className="sc-hSdWYo jaBeGT"
/>
`;

exports[`should render article 1`] = `
<article
  className="sc-dnqmqq bTTEXy"
/>
`;

exports[`should render aside 1`] = `
<aside
  className="sc-iwsKbI bhBXJV"
/>
`;

exports[`should render audio 1`] = `
<audio
  className="sc-gGBfsJ fYLDYo"
/>
`;

exports[`should render blockquote 1`] = `
<blockquote
  className="sc-gZMcBi ioEIdT"
/>
`;

exports[`should render box 1`] = `
<div
  className="sc-bxivhb gNnTrM"
/>
`;

exports[`should render button 1`] = `
<button
  className="sc-fBuWsC gavAfU"
/>
`;

exports[`should render caption 1`] = `
<caption
  className="sc-jqCOkK fdRDum"
/>
`;

exports[`should render cite 1`] = `
<cite
  className="sc-cvbbAY jfpavh"
/>
`;

exports[`should render code 1`] = `
<code
  className="sc-jDwBTQ ZTSa"
/>
`;

exports[`should render col 1`] = `
<col
  className="sc-dNLxif joZuwv"
/>
`;

exports[`should render colgroup 1`] = `
<colgroup
  className="sc-jbKcbu jGZIQT"
/>
`;

exports[`should render data 1`] = `
<data
  className="sc-brqgnP bLXlwV"
/>
`;

exports[`should render dd 1`] = `
<dd
  className="sc-hzDkRC ixkZiN"
/>
`;

exports[`should render del 1`] = `
<del
  className="sc-kkGfuU dceAlh"
/>
`;

exports[`should render dfn 1`] = `
<dfn
  className="sc-jWBwVP iKyWVx"
/>
`;

exports[`should render div 1`] = `
<div
  className="sc-ifAKCX tHWYN"
/>
`;

exports[`should render dl 1`] = `
<dl
  className="sc-Rmtcm NaBbo"
/>
`;

exports[`should render dt 1`] = `
<dt
  className="sc-bRBYWo eBhhOC"
/>
`;

exports[`should render em 1`] = `
<em
  className="sc-dxgOiQ eSApoT"
/>
`;

exports[`should render fieldset 1`] = `
<fieldset
  className="sc-fAjcbJ exEPba"
/>
`;

exports[`should render figcaption 1`] = `
<figcaption
  className="sc-iRbamj kWEtvY"
/>
`;

exports[`should render figure 1`] = `
<figure
  className="sc-gPEVay dSELIJ"
/>
`;

exports[`should render flex 1`] = `
<div
  className="sc-htpNat clOAIQ"
/>
`;

exports[`should render footer 1`] = `
<footer
  className="sc-gzVnrw gUSCiV"
/>
`;

exports[`should render form 1`] = `
<form
  className="sc-eqIVtm beBbZm"
/>
`;

exports[`should render h1 1`] = `
<h1
  className="sc-VigVT ehSybh"
/>
`;

exports[`should render h2 1`] = `
<h2
  className="sc-jTzLTM gCioaR"
/>
`;

exports[`should render h3 1`] = `
<h3
  className="sc-fjdhpX jZmmpk"
/>
`;

exports[`should render h4 1`] = `
<h4
  className="sc-jzJRlG bKmiqH"
/>
`;

exports[`should render h5 1`] = `
<h5
  className="sc-cSHVUG bksCYH"
/>
`;

exports[`should render h6 1`] = `
<h6
  className="sc-kAzzGY iLLDxR"
/>
`;

exports[`should render header 1`] = `
<header
  className="sc-EHOje irNgvr"
/>
`;

exports[`should render hgroup 1`] = `
<hgroup
  className="sc-gqjmRU fUYoYW"
/>
`;

exports[`should render image 1`] = `
<img
  className="sc-bbmXgH dgyBhP"
/>
`;

exports[`should render img 1`] = `
<img
  className="sc-uJMKN ktppFx"
/>
`;

exports[`should render input 1`] = `
<input
  className="sc-kjoXOD fybdBD"
/>
`;

exports[`should render inputsubmit 1`] = `
<input
  className="sc-dVhcbM gfEAjL"
/>
`;

exports[`should render label 1`] = `
<label
  className="sc-gisBJw dSKIAB"
/>
`;

exports[`should render legend 1`] = `
<legend
  className="sc-caSCKo kykvgk"
/>
`;

exports[`should render li 1`] = `
<li
  className="sc-csuQGl dNdVYM"
/>
`;

exports[`should render linkbutton 1`] = `
<a
  className="sc-fMiknA hzDsJo"
/>
`;

exports[`should render main 1`] = `
<main
  className="sc-bZQynM iUMAkH"
/>
`;

exports[`should render mark 1`] = `
<mark
  className="sc-iAyFgw iDliZa"
/>
`;

exports[`should render nav 1`] = `
<nav
  className="sc-jhAzac kxlDIP"
/>
`;

exports[`should render ol 1`] = `
<ol
  className="sc-gipzik fnyWMO"
/>
`;

exports[`should render option 1`] = `null`;

exports[`should render p 1`] = `
<p
  className="sc-kgoBCf hvZESQ"
/>
`;

exports[`should render pre 1`] = `
<pre
  className="sc-jAaTju edtHEe"
/>
`;

exports[`should render q 1`] = `
<q
  className="sc-eHgmQL iAqEqW"
/>
`;

exports[`should render section 1`] = `
<section
  className="sc-htoDjs jTRijE"
/>
`;

exports[`should render select 1`] = `
<select
  className="sc-cHGsZl tMWEe"
/>
`;

exports[`should render small 1`] = `
<small
  className="sc-jKJlTe lbGbdU"
/>
`;

exports[`should render span 1`] = `
<span
  className="sc-kpOJdX fmdkqp"
/>
`;

exports[`should render strong 1`] = `
<strong
  className="sc-ckVGcZ hpMFpH"
/>
`;

exports[`should render sub 1`] = `
<sub
  className="sc-eNQAEJ jhRIhH"
/>
`;

exports[`should render sup 1`] = `
<sup
  className="sc-hMqMXs byssTT"
/>
`;

exports[`should render table 1`] = `
<table
  className="sc-kgAjT dtTRXu"
/>
`;

exports[`should render tbody 1`] = `
<tbody
  className="sc-cJSrbW kOUcGi"
/>
`;

exports[`should render td 1`] = `
<td
  className="sc-kvZOFW gggWCh"
/>
`;

exports[`should render text 1`] = `
<p
  className="sc-chPdSV gdmsnK"
/>
`;

exports[`should render textarea 1`] = `
<textarea
  className="sc-TOsTZ iRiIOr"
/>
`;

exports[`should render tfoot 1`] = `
<tfoot
  className="sc-hqyNC gjuiQB"
/>
`;

exports[`should render th 1`] = `
<th
  className="sc-hmzhuo hPHaFg"
/>
`;

exports[`should render thead 1`] = `
<thead
  className="sc-ksYbfQ jdBZvk"
/>
`;

exports[`should render time 1`] = `
<time
  className="sc-cMljjf fHSTkF"
/>
`;

exports[`should render tr 1`] = `
<tr
  className="sc-frDJqD bmcqad"
/>
`;

exports[`should render u 1`] = `
<u
  className="sc-kEYyzF fCfOxI"
/>
`;

exports[`should render ul 1`] = `
<ul
  className="sc-jlyJG ZYuXJ"
/>
`;

exports[`should render video 1`] = `
<video
  className="sc-jnlKLf kDfuuM"
/>
`;
